moving abs versus rel paths to code reusability

--- a/book/slides/slides_cq_reusability.qmd
+++ b/book/slides/slides_cq_reusability.qmd
@@ -44,6 +44,22 @@ format:
  
 :::
 
+## Absolute vs. Relative Paths
+
+::: {.theme-section}
+
+* Your project should be transportable between computers.
+
+* For this reason, you should use **relative paths** only: compare
+    + `/Users/barbara/Dropbox/proteindomains/data/zincfinger.json`
+    + `./data/zincfinger.json`
+
+* `./` means: in this folder
+
+* `../` means: one folder up
+
+:::
+
 ## Code reusability through functions
 
 ::: {.theme-section}
