--- a/book/slides/slides_project-setup.qmd
+++ b/book/slides/slides_project-setup.qmd
@@ -82,7 +82,7 @@ format:
 └── src                <- Source code for this project (HW)
 ```
 
-## Choosing a license
+## Licenses
 
 ::: {.theme-section}
 
@@ -94,27 +94,27 @@ format:
 
 - There are over [80 OSI-approved licenses](https://opensource.org/licenses/alphabetical) (and [many](http://dbad-license.org), [many](http://www.wtfpl.net) others) to choose from.
 
-This is one I like to use:
-
 ![](../images/screenshots/license.png)
 
-What is important to you? What does your lab use? [Choose your own license!](http://choosealicense.com)
+We will dive into licenses in the Software Publication chapter.
 
 :::
 
-## Publishing your project
+## Public or Private?
 
 ::: {.theme-section}
 
-Uh... Isn't 'publication' the thing you do... _at the end?_ 
+When creating a GitHub repository for your code you need to decide to make it publicly accessible or to keep it private.
 
 ::: {.fragment}
 
-No! Publishing your project at an early stage
-- forces you to consider readability throughout
-- minimizes the mess you have to deal with when you (finally) decide to publish
-- allows collaboration and support
-- facilitates sharing and re-use.
+Publishing your project at an early stage
+- Consider readability throughout
+- Get feedback during development from your community
+- May generate collaborations
+- Makes it easier to create a Publication or a software package
+
+--> Open Science
 
 :::
 
@@ -126,54 +126,25 @@ _But what if someone scoops my code! I'm a revolutionary, they will steal my ide
 
 ::: {.fragment}
 
-If you are super paranoid, you can always opt for a private repository. It is your work & up to you. But consider the advantages!
+You can always opt for a private repository.
+
 :::
 :::
 
-## Publishing unpublished data
+## Data
 
 ::: {.theme-section}
 
-* If you have sensitive data...
+**How to include large, sensitive data or unpublished data?**
 
-    + Don't include your data in your software repository (that's not what they are for anyway).
-    + Consider generating simulated data so your code can run regardless.
+* Don't include your data in your software repository.
+* Include simulated data or a small example dataset to test your code.
 
-* And for all data:
+* Research Data and full datasets:
 
     + Your data should be separate from your code!
-    + If your code references your data, consider a config or metadata file for these references.
+    + Provide instructions where to store the data with respect to the software
+    + Privide a configuration file where users define where data is stored.
+    + Make software callable with different data paths. (No absolute paths!)
 
-:::
-
-## Where do I publish?
-
-::: {.theme-section}
-:::: {.columns}
-::: {.column width=70%}
-
-### Living project: github
-(or other social coding platform):
-
-- synergistic with version control software git
-
-- makes history public and accessible _(eek!)_
-
-- allows publication of different releases
-
-- provides a platform for interaction and collaboration
-
-### Archiving a release: zenodo
-(or other stable repository, like the [OSF](https://vickysteeves.gitlab.io/2018-uutah-repro/the-open-science-framework.html))
-- [direct archiving supported](https://guides.github.com/activities/citable-code/) from github to zenodo
-
-- this gives you a **doi** (digital object identifier): your code is citeable!
-
-:::
-::: {.column width=30%}
-
-![octocat-project](https://octodex.github.com/images/original.png)
-![zenodo](https://blog.zenodo.org/static/img/logos/zenodo-gradient-1000.png)
-:::
-::::
 :::
