--- a/book/slides/slides_archiving_publishing.qmd
+++ b/book/slides/slides_archiving_publishing.qmd
@@ -156,25 +156,7 @@ __The Sandbox DOI will not work like a normal one does!__
 ::: {.fragment fragment-index=1}
 **Let's exchange projects!**
 
-Please go to the second tab in the status chart [tinyurl.com/repcochart](https://docs.google.com/spreadsheets/d/1J3SfR2C0cghVjUPGCjk9UXZzipB3c7HL5Z1iicK8adc/edit#gid=600881461), and fill out:
-
-- your project name
-- your project (github) URL
-- your name
-- the language in which the project was written
-
-in the yellow columns.
-
-
-NB this information will be deleted right after the course
-
-:::
-
-::: {.fragment fragment-index=2}
-**Now, write your name in one of the blue columns behind a project you will reproduce.**
-
-
-We hope that everyone's repository will get a reproduction-attempt, so only add your name to the second column if there are no repos left (for you)!
+Find one of your neighbours and exchange the URLs to your GitHub repository.
 
 :::
 
